--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
-    <string name="app_name">Playschool_Support</string>
-    <string name="title_activity_home">HomeActivity</string>
-    <string name="title_chat">Chat</string>
-    <string name="title_message">Message</string>
-    <string name="title_profile">Profile</string>
+    <string name="app_name">Playschool Support</string>
+    <string name="message">Message</string>
+    <string name="support">Support</string>
+    <string name="profile">Profile</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
